<resources>
    <string name="app_name">InternshipSignInContractApp</string>
    <string name="login">LogIn</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="account_type">Account Type</string>
    <string name="forgot_password">forgot password?</string>
    <string name="update_profile">Update profile</string>
    <string name="sign_convention">Sign Convention</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>

    <string name="type_name_of_companies">Type name of companies</string>
    <string name="home">Home</string>
    <string name="edit_profile">Edit profile</string>
    <string name="attach_cv">Attach cv</string>

    <string name="recover_account">Recover account</string>
    <string name="update_firm">Update firm</string>
    <string name="category">Category</string>
    <string name="add_a_description">Add a description</string>
    <string name="create_account">Create account</string>
    <string name="see_status">See status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="add_internhip">Add internhip</string>
    <string name="offer_name">Offer name</string>
    <string name="mandatory_to_know">Mandatory to know</string>
    <string name="programming_languages">Programming languages</string>
    <string name="add">Add</string>
    <string name="skills">Skills:</string>
    <string name="apply">apply</string>
    <string name="accept">Accept</string>
    <string name="reject">reject</string>
</resources>