<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/account_creation"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/create_account"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_update_profile"
        android:title="@string/sign_convention"/>
    <item
        android:id="@+id/status"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/see_status"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/log_out"/>
</menu>