<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_page_student_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/edit_account_student_fragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/update_profile"/>
    <item
        android:id="@+id/sign_convention_student"
        android:enabled="true"
        android:icon="@drawable/ic_update_profile"
        android:title="@string/sign_convention"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/log_out"/>
</menu>