<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2D0A4"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="60dp"
        android:textColor="@color/text_Color"
        android:fontFamily="@font/fredokaone_regular"
        app:layout_constraintBottom_toTopOf="@id/usernameInputLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="username"
        android:id="@+id/usernameInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/fredokaone_regular"
            android:layout_height="wrap_content"
            android:textColor="@color/text_Color"
            android:drawableEnd="@drawable/ic_username"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Password"

        android:layout_marginTop="264dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        android:id="@+id/textLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/fredokaone_regular"
            android:layout_height="wrap_content"
            android:textColor="@color/text_Color"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/forgot"
        android:fontFamily="@font/fredokaone_regular"
        android:textSize="20dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/textLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forgot_password"
        android:textColor="@color/text_Color"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:backgroundTint="@color/button_Color"
        app:icon="@drawable/ic_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot"
        style="@style/Widget.MaterialComponents.Button.Icon"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/signUp_btn"
     android:backgroundTint="@color/button_Color"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn"
        app:icon="@drawable/ic_signup"
        style="@style/Widget.MaterialComponents.Button.Icon"
        />
</androidx.constraintlayout.widget.ConstraintLayout>