<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2D0A4"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".add_offer_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="Add new offer"
        android:textSize="60dp"
        app:layout_constraintBottom_toTopOf="@id/Offer"
        android:textColor="@color/text_Color"
        android:fontFamily="@font/fredokaone_regular"

        app:layout_constraintStart_toStartOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/offer_name"
        android:id="@+id/Offer"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Languages"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:fontFamily="@font/fredokaone_regular"
        android:layout_height="wrap_content"
        android:textColor="@color/text_Color"
        android:drawableEnd="@drawable/ic_username"
        android:id="@+id/offerInput"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/programming_languages"
        android:id="@+id/Languages"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Offer"
        android:layout_marginTop="264dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/fredokaone_regular"
            android:layout_height="wrap_content"
            android:textColor="@color/text_Color"
            android:drawableEnd="@drawable/ic_username"
            android:id="@+id/Languagesinput"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Salary(you can skip it if it is not paid)"

        android:layout_marginTop="364dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        android:id="@+id/salary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/fredokaone_regular"
            android:layout_height="wrap_content"
            android:textColor="@color/text_Color"
            android:id="@+id/salary_input"
            android:drawableEnd="@drawable/ic_email"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/addOffer"
        android:backgroundTint="@color/button_Color"
        android:text="@string/add"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salary"
        app:icon="@drawable/ic_signup"
        style="@style/Widget.MaterialComponents.Button.Icon"
        />


</androidx.constraintlayout.widget.ConstraintLayout>