<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2D0A4"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textSize="60dp"
        android:textColor="@color/text_Color"
        android:fontFamily="@font/fredokaone_regular"
        app:layout_constraintBottom_toTopOf="@id/usernameInputLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="username"
        android:id="@+id/usernameInputLayout"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/fredokaone_regular"
            android:layout_height="wrap_content"
            android:textColor="@color/text_Color"
            android:drawableEnd="@drawable/ic_username"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="Password"

        android:layout_marginTop="264dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        android:id="@+id/textLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/fredokaone_regular"
            android:layout_height="wrap_content"
            android:textColor="@color/text_Color"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:hint="@string/email"

        android:layout_marginTop="364dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_horizontalBias="0.0"
        android:id="@+id/textLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/fredokaone_regular"
            android:layout_height="wrap_content"
            android:textColor="@color/text_Color"
            android:id="@+id/email_input"
            android:drawableEnd="@drawable/ic_email"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/signUp_btn"
        android:backgroundTint="@color/button_Color"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu"
        app:icon="@drawable/ic_signup"
        style="@style/Widget.MaterialComponents.Button.Icon"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"

       android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textLayoutEmail"
        android:hint="@string/account_type">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Already user ? Press here"
        android:textSize="20dp"
        android:textColor="@color/text_Color"
        android:fontFamily="@font/fredokaone_regular"
        app:layout_constraintTop_toBottomOf="@id/menu"
        android:clickable="true"
        android:onClick="alreadyUserBtnPressed"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>